snap: Don't crash when a null channel is returned

BUG: 492657